syntax = "proto3";
package osmosis.poolincentives.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "osmosis/poolincentives/v1beta1/incentives.proto";

option go_package = "github.com/osmosis-labs/osmosis/v21/x/pool-incentives/types";

// GenesisState defines the pool incentives module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [ (gogoproto.nullable) = false ];
  repeated google.protobuf.Duration lockable_durations = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true,
    (gogoproto.moretags) = "yaml:\"lockable_durations\""
  ];
  DistrInfo distr_info = 3 [
    (gogoproto.nullable) = true,
    (gogoproto.moretags) = "yaml:\"distr_info\""
  ];
  // any_pool_to_internal_gauges defines the gauges for any pool to internal
  // pool. For every pool type (e.g. LP, Concentrated, etc), there is one such
  // link
  AnyPoolToInternalGauges any_pool_to_internal_gauges = 4 [
    (gogoproto.nullable) = true,
    (gogoproto.moretags) = "yaml:\"internal_pool_to_gauges\""
  ];
  // concentrated_pool_to_no_lock_gauges defines the no lock gauges for
  // concentrated pool. This only exists between concentrated pool and no lock
  // gauges. Both external and internal gauges are included.
  ConcentratedPoolToNoLockGauges concentrated_pool_to_no_lock_gauges = 5 [
    (gogoproto.nullable) = true,
    (gogoproto.moretags) = "yaml:\"concentrated_pool_to_no_lock_gauges\""
  ];
}
